# jet-fuel-commodity-tracker

./: .gitignore  Makefile  README.md  Welcome.py  config.toml  pyproject.toml  streamlit_app.py
.github/workflows/: update.yml
.streamlit/: config.toml
app/: analytics.py  extract_article.py  get_current_events.py  get_data.py  get_news.py  llm_predictor.py  scrape_data.py
app/sections/: commodity.py  header.py  llm_prediction.py  news.py  refinery.py
app/sections/analysis/: current_report.py  historical_reports.py  report_renderer.py
data/: argus_news_cache.json  commodity_diesel_prices.xlsx  commodity_jetfuel_prices.xlsx  current_week.json  llm_prediction_snapshot.json  refinery_utilization.json  spot_prices.json
data/reports/: week_1_report.json  week_2_report.json  week_4_report.json
pages/: 1_Dashboard.py  2_Analysis.py  3_Admin.py
resources/: eagle2.avif  eagle3.avif
