[project]
name = "jet-fuel-commodity-tracker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "google>=3.0.0",
    "pandas>=2.3.3",
    "plotly>=6.5.2",
    "requests>=2.32.5",
    "selenium>=4.40.0",
    "streamlit>=1.52.2",
    "webdriver-manager>=4.0.2",
    "xlrd>=2.0.2",
]
